--- a/src/components/SliderCard/slidercard.css
+++ b/src/components/SliderCard/slidercard.css
@@ -2,7 +2,7 @@
     /* margin-top: 80px; */
     padding: 0 40px 60px;
     /* background-color:#245796 ; */
-    background: linear-gradient(to bottom, #3368a8, #7eafeb);
+    background: linear-gradient(to bottom, #6ba3e7, #7eafeb);
 }
 
 .homeSlide h1 {
